<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lytReleases"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/padding_small"
              android:layout_marginEnd="@dimen/margin_normal"
              android:layout_marginStart="@dimen/margin_normal"
              android:layout_marginTop="@dimen/padding_small"
              android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:text="@string/view_releases"
        android:textSize="@dimen/text_normal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="clickable link"
        android:src="@drawable/ic_chevron_right_black_24dp"/>

</LinearLayout>