...
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white"/>

    <bj.vinylbrowser.customviews.MyRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="0dp"-->
...
    <!--android:id="@+id/tvViewSellerShipping"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:includeFontPadding="false"-->
    <!--android:padding="@dimen/padding_small"-->
    <!--android:text="View seller shipping info"-->
    <!--android:textSize="@dimen/text_normal"/>-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
...
