<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/lytViewOnDiscogs"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/margin_normal"
              android:layout_marginStart="@dimen/margin_normal"
              android:orientation="horizontal"
              android:paddingBottom="@dimen/margin_normal_half"
              android:paddingTop="@dimen/margin_normal_half">

    <TextView
        android:id="@+id/tvText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_weight="1"
        android:text="View on Discogs"
        android:textSize="@dimen/text_normal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginEnd="@dimen/margin_normal_half"
        android:scaleType="fitXY"
        android:src="@drawable/ic_chevron_right_black_24dp"/>

</LinearLayout>